--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -16,6 +16,7 @@ code {
 
 .header {
   align-content: center;
+  text-align: center;
   margin-bottom: 40px;
   padding: 40px 0;
   background: linear-gradient(90deg, rgb(255,156,0), rgb(255,2,0), rgb(166,7,128), rgb(5,112,251));
@@ -43,9 +44,10 @@ code {
 /* } */
 
 .theme-color-slider {
+  display: block;
   -webkit-appearance: none;
   appearance: none;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
   width: 50%;
   height: 35px;
   padding: 0 2px;
@@ -89,6 +91,7 @@ code {
   justify-content: space-between;
   height: 100px;
   padding: 0 30px;
+  margin-bottom: 40px;
 }
 
 .header-change-theme__logo,
@@ -108,4 +111,10 @@ code {
 .nav-list__list-item {
   margin: 5px 10px;
   padding: 5px 10px;
+}
+
+.card__container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
